- add support for SHA512

Version 16.28 - 28 April 2014

- recognize new kernel-3.14 drivers

Version 16.27.1 - 29 April 2014

- add support for merging updated translations from Mageia

Version 16.27 - 18 February 2014

- nuke create_link_source(), as we haven't supported building against an
  unprepared source for ages, and currently also can trigger wrong symlinks
  when kernel-source is installed before for example kernel-linus as found
  out during QA for mga#12518 and debugging the issue on irc

Version 16.26.8 - 4 February 2014

- harddrake:
  o fix untranslated "Help" entry in menu (mga#12497)

Version 16.26.7 - 25 January 2014

- do not exec pkexec but run it so it has a parent process to fix double fork
  issues mga#11184 mga#12364

Version 16.26.1 - 20 January 2014

- diskdrake:
  o increase back minimum partition width for Oxygen (mga#11977)

Version 16.26 - 20 January 2014

- diskdrake:
  o fix sizing partition widgets
  o revert minimum partition width to its pre-gtk3 value

Version 16.23 - 16 January 2014

- dont remove pulseaudio-module-bluetooth (mga#12323)
- fix a rpmdrake crash (mga#12331)

Version 16.22 - 15 January 2014

- services:
  o use --no-block with chkconfig and systemctl enable to prevent systemd reload
    and potential crash (especially during first/live boot)
- harddrake:
  o fix detecting some wireless devices as scanners (mga#9895)
  o fix random order of fields with perl-5.18

Version 16.21 - 13 January 2014

- diskdrake:
  o do not propose check bad blocks for btrfs (Manuel Hiebel, mga#10116)
  o increase minimum partition width for Oxygen (mga#11977)
    (if not enough, we will disable labels on partitions buttons again)
- drakboot:
  o add minimal/experimental lightdm autologin support (mga#11746)
- harddrake, logdrake:
  o fix menu accelerators
- --version option:
  o display mga copyright too (mga#10289)

Version 16.18 - 28 December 2013

- detecting input devices: