@@ -273,7 +273,7 @@ sub ask_encrypt_home() {
                       authentication::check_given_password($in, $user, 6) or return 1,0;
                       return 0;
                   });
-    authentication::write_passwd_user($user, $authentication);
+    authentication::modify_user($user, $authentication);
     encrypt_home($user);
 }
 
