@@ -1,3 +1,4 @@
+- in stead of modifying /etc/passwd directly, just simply use 'usermod'
 - add support for SHA512
 
 Version 16.28 - 28 April 2014
